# nextwall

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  THANKS  compile_commands.json  config.h.in  configure.ac  nextwall  nextwall.py  setup.py
cmake/: cmake_uninstall.cmake.in  cpack_nextwall.cmake
cmake/debian/: postinst.in
data/: Makefile.am
data/ann/: nextwall.net
glade/: about.glade  image_info.glade  load_backgrounds.glade
gnome-shell-extension/: Makefile.am  include.mk
gnome-shell-extension/src/: Makefile.am  extension.js  metadata.json  org.gnome.shell.extensions.nextwall.gschema.xml  prefs.js  stylesheet.css
icons/: Makefile.am
include/: config.h.in  gnome.h  gsettings.h  image.h  nextwall.h  options.h  std.h  trainer_options.h
lib/: Makefile.am  database.c  database.h  gnome.c  gnome.h  image.c  image.h  std.c  std.h  sunriset.c  sunriset.h
man/: Makefile  Makefile.am  nextwall.1  nextwall.h2m
src/: CMakeLists.txt  Makefile.am  functions.c  gnome.c  image.c  indicator.py  nextwall-trainer.c  nextwall.c  nextwall.h  nextwall.py  options.c  options.h  std.c  std.py  sunriset.c  train_ann.c  trainer-options.c  trainer-options.h
src/glade/: about.glade  image_info.glade  preferences.glade  scan_backgrounds.glade
src/scripts/: CMakeLists.txt  nextwall  nextwall.in
src/util/: Makefile  train_ann.c
tests/: Makefile.am  check-nextwall.c
